# autolab

./: .gitignore  .readthedocs.yaml  How to push a new version of USIt on PyPi.txt  MANIFEST  MANIFEST.in  README.md  __init__.py  demo.ipynb  drivers_path.txt  make  pyproject.toml  setup.py  test.py
.github/ISSUE_TEMPLATE/: bug_report.md
autolab/: Push a new version on PyPi.txt  __init__.py  _entry_script.py  devices.py  drivers.py  version.txt
autolab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
autolab/core/: _create_shortcut.py  config.py  default_driver_utilities.py  devices.py  devices_config.ini  devices_index.ini  draft.txt  drivers.py  drivers_parser_utilities.py  elements.py  gitdir.py  index.py  infos.py  local_config.ini  paths.py  recorder.py  repo.py  repository.py  server.py  stats.py  telemetry.py  test.py  updater.py  utilities.py  variables.py  version_adapter.py  web.py
autolab/core/gui/: GUI_about.py  GUI_add_device.py  GUI_driver_installer.py  GUI_instances.py  GUI_preferences.py  GUI_slider.py  GUI_utilities.py  GUI_variables.py  __init__.py  about.py  add_device.py  slider.py  variables.py
autolab/drivers/: driver_list.txt
autolab/drivers/More/: GUIDELINES.md  README.md  (+2 more)
autolab/scripts/: autolab-device.py  autolab-driver.py  autolab.py  autolab_device.py  autolab_driver.py
config/: config.ini
devices/: __init__.py  devices.py  drivers.py
docs/: Nouveau document texte.txt  about.rst  command_line.rst  conf.py  drivers.rst  example_config.conf  example_config2.conf  example_config3.conf  help_report.rst  high_level.rst  index.rst  installation.rst  introduction.rst  local_config.rst  logos.psd  release_notes.rst  releases_notes.rst
docs/builds/: genindex.html  index.html  objects.inv  search.html
docs/gui/: control_center.rst  extra.rst  index.rst  miscellaneous.rst  monitoring.rst  plotting.rst  scanning.rst
docs/high_level/: advanced.rst  advanced_use.rst  device_model.rst  index.rst  open_and_use.rst  user_guide.rst
docs/low_level/: advanced_use.rst  configuration.rst  create_driver.rst  driver_config.rst  index.rst  open_and_use.rst  open_and_use_preconf.rst  save_config.rst  userguide.rst
docs/shell/: .connection.rst.kate-swp  .driver.rst.kate-swp  autolab-devices.rst  autolab-drivers.rst  autolab.rst  connection.rst  device.rst  driver.rst  index.rst
scripts/: autolab.py  autolab_OLD.py  autolab_device.py  autolab_driver.py  autolab_new.py
usit/: __init__.py  version.txt
usit/config/: config.py
usit/core/: __init__.py  _config.py  _drivers.py  _report.py  _web.py  devices_index_template.ini
usit/devices/: devices.py  drivers.py
usit/docs/: index.rst
usit/drivers/: __init__.py
usit/recorder_old/: recorder.py
usit/toolbox/: __init__.py  scan.py
(+476 files in other folders)
