[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "autolab"
version = "2.0b1"
authors = [
  {name = "Quentin Chateiller"},
  {name = "Bruno Garbin"},
  {name = "Jonathan Peltier"},
  {name = "Mathieu Jeannin"},
  {email = "autolab-project@googlegroups.com"}
]
license = {text = "GPL-3.0 license"}
description = 'Python package for scientific experiments interfacing and automation'
readme = "README.md"
dependencies = [
    "numpy>=1.16",
	"pandas>=0.24",
    "pyvisa>=1.10",
    "python-vxi11>=0.9",
	"pyqtgraph>=0.12.4",
	"qtpy"
]
classifiers=["Programming Language :: Python :: 3",
                 "Programming Language :: Python :: 3 :: Only",
				"Programming Language :: Python :: 3.6",
				"Programming Language :: Python :: 3.7",
				"Programming Language :: Python :: 3.8",
				"Programming Language :: Python :: 3.9",
				"Programming Language :: Python :: 3.10",
				"Programming Language :: Python :: 3.11",
				"Programming Language :: Python :: 3.12",
                 "Operating System :: OS Independent"]

[project.scripts]
autolab = "autolab:main"

[tool.setuptools.package-data]
"*"  = ["*.ui", "*.txt"]