[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "autolab"
dynamic = ["version", "requires-python"]

authors = [
  {name = "Quentin Chateiller"},
  {name = "Bruno Garbin"},
  {name = "Jonathan Peltier"},
  {name = "Mathieu Jeannin"},
  {email = "autolab-project@googlegroups.com"}
]
license = {text = "GPL-3.0 license"}
description = 'Python package for scientific experiments interfacing and automation'
readme = "README.md"
dependencies = [
    "numpy>=1.16",
	"pandas>=0.24",
    "pyvisa>=1.10",
    "python-vxi11>=0.9",
	"pyqtgraph",
	"qtpy",
	"requests",
	"tqdm",
	"comtypes",
]
classifiers=["Programming Language :: Python :: 3",
                 "Programming Language :: Python :: 3 :: Only",
				"Programming Language :: Python :: 3.6",
				"Programming Language :: Python :: 3.7",
				"Programming Language :: Python :: 3.8",
				"Programming Language :: Python :: 3.9",
				"Programming Language :: Python :: 3.10",
				"Programming Language :: Python :: 3.11",
				"Programming Language :: Python :: 3.12",
                 "Operating System :: OS Independent"]

[project.optional-dependencies]
gui = ["PyQt5", "pillow"]

[project.urls]
Documentation = "https://autolab.readthedocs.io/en/latest/"
Repository = "https://github.com/autolab-project/autolab.git"
"Bug Tracker" = "https://github.com/autolab-project/autolab/issues"

[project.scripts]
autolab = "autolab:_main"

[tool.setuptools.package-data]
"*"  = ["*.ui", "*.txt"]
